# QuEra-Challenge

./: README.md  challenge.md  pyproject.toml
outputs/quirk_links/: quirk_links_eps001.txt  quirk_links_eps01.txt  rs_quirk_eps001.txt
outputs/sequences/: rs_sequences_eps001.txt  rs_sequences_eps01.txt
star/: README.md
star/part1_surface_code/: noise_models.py  noise_models_multiscale.py  surface_code_d3.py  surface_code_generator.py  validate_surface_code.py
star/part1_surface_code/star_scaling_plots/: star_metrics.csv
star/part2_star_fidelity/: star_fidelity_simulation.ipynb
star/part3_teleported_rotation/: README.md  part3.ipynb
star/part4_qft_circuit/: qft_resource_analysis.py  qft_teleported_rotations.ipynb
synthesis/: README.md
synthesis/common/: generate_figures.py
synthesis/part1_clifford_t/: simulate_gates.py
synthesis/part2_gate_synthesis/: approximate_synthesis.py  exact_decompositions.py  rs_circuits.py
synthesis/part3_magic_injection/: magic_state_injection.py
synthesis/part4_steane_code/: logical_qubit.py  verify_magic_state.py
